modules/vpc/main.tf
locals {
azs                  = slice(data.aws_availability_zones.available.names, 0, var.az_count)
public_subnet_cidrs = [for i in range(var.az_count) : cidrsubnet(var.cidr, 8, i)]
private_subnet_cidrs = [for i in range(var.az_count) : cidrsubnet(var.cidr, 8, i + 10)]
}


resource "aws_vpc" "this" {
cidr_block = var.cidr
enable_dns_support = true
enable_dns_hostnames = true
tags = { Name = "${var.name}-vpc" }
}


resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.this.id
tags = { Name = "${var.name}-igw" }
}


resource "aws_subnet" "public" {
count = var.az_count
vpc_id = aws_vpc.this.id
cidr_block = local.public_subnet_cidrs[count.index]
map_public_ip_on_launch = true
availability_zone = local.azs[count.index]
tags = { Name = "${var.name}-public-${count.index}" }
}


resource "aws_subnet" "private" {
  count             = var.az_count
  vpc_id            = aws_vpc.this.id
  cidr_block        = local.private_subnet_cidrs[count.index]
  availability_zone = local.azs[count.index]
  tags = { Name = "${var.name}-private-${count.index}" }
}

data "aws_availability_zones" "available" {}


resource "aws_eip" "nat" {
depends_on = [aws_internet_gateway.igw]
tags = { 
    Name = "${var.name}-nat-eip" 
    }
}


resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id   # <— list indexing, not values()
  tags = {
    Name = "${var.name}-nat-gw"
  }
  depends_on = [aws_internet_gateway.igw]
}

resource "aws_route_table" "public" {
vpc_id = aws_vpc.this.id
route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.igw.id
}
tags = { Name = "${var.name}-public-rt" }
}


resource "aws_route_table_association" "public" {
count = var.az_count
subnet_id = aws_subnet.public[count.index].id
route_table_id = aws_route_table.public.id
}


resource "aws_route_table" "private" {
vpc_id = aws_vpc.this.id
route {
cidr_block = "0.0.0.0/0"
nat_gateway_id = aws_nat_gateway.nat.id
}
tags = { Name = "${var.name}-private-rt" }
}
